making pg. 1 more responsive, and also the code more concise

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <meta charset="utf-8">
 
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width initial-scale=1.0" />
 
   <title>World Happiness</title>
 
@@ -22,7 +22,7 @@
 
   <script src="https://unpkg.com/d3-interpolate@3.0.1/dist/d3-interpolate.min.js"> </script>
 
-  <link href="css/styles.css" rel="stylesheet" type="text/css" />
+  <link href="stylesheet1.css" rel="stylesheet" type="text/css" />
 
 </head>
 
@@ -42,9 +42,9 @@
 
 </nav>
 
-  <h1 class="title" id="title">World Happiness:</h1>
+  <h2 id="title">World Happiness:</h2>
 
-  <h2 class="subtitle" id="subtitle">Happiness Score by Countries (2022)</h2>
+  <h4 id="subtitle">Happiness Score by Countries (2022)</h4>
 
   <select id="selectButton"></select>
 
@@ -52,7 +52,7 @@
 
   <script src="vals22.js"></script>
 
-  <script src="total_score_2022.js"></script>
+  <script src="barcharts.js"></script>
 
 </body>
 
