--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <script src="https://unpkg.com/d3-interpolate@3.0.1/dist/d3-interpolate.min.js"> </script>
 
-  <link href="stylesheet1.css" rel="stylesheet" type="text/css" />
+  <link href="styles1.css" rel="stylesheet" type="text/css" />
 
 </head>
 
@@ -52,7 +52,7 @@
 
   <script src="vals22.js"></script>
 
-  <script src="barcharts.js"></script>
+  <script src="bars.js"></script>
 
 </body>
 
