changes concerning responsiveness, 'cosmetics'

--- a/dimensions.html
+++ b/dimensions.html
@@ -24,7 +24,7 @@
 
   <script src="https://unpkg.com/d3-interpolate@3.0.1/dist/d3-interpolate.min.js"> </script>
 
-  <link href="css/styles.css" rel="stylesheet" type="text/css" />
+  <link href="styles2.css" rel="stylesheet" type="text/css" />
 
 </head>
 
@@ -48,9 +48,9 @@
 
 </nav>
 
-  <h1 class="title" id="title">World Happiness:</h1>
+  <h2 class="title" id="title">World Happiness:</h2>
 
-  <h2 class="subtitle" id="subtitle">Happiness Score 2022: Dimensions </h2>
+  <h4 class="subtitle" id="subtitle">Happiness Score 2022: Dimensions </h4>
 
 <div id="tooltip"></div> 
 
