whole lotta cosmetics

--- a/timeline.html
+++ b/timeline.html
@@ -24,7 +24,7 @@
 
   <script src="https://unpkg.com/d3-interpolate@3.0.1/dist/d3-interpolate.min.js"> </script>
 
-  <link href="css/styles.css" rel="stylesheet" type="text/css" />
+  <link href="styles3.css" rel="stylesheet" type="text/css" />
 
 </head>
 
@@ -46,9 +46,9 @@
 
 </nav>
 
-  <h1 class="title" id="title">World Happiness:</h1>
+  <h2 id="title">World Happiness:</h2>
 
-  <h2 class="subtitle" id="subtitle">Dimensions by Country Over Time</h2>
+  <h4 id="subtitle">Dimensions by Country Over Time</h4>
 
 <select id="selectButton"></select>
 
