removed slash in favicon link

--- a/dimensions.html
+++ b/dimensions.html
@@ -23,7 +23,7 @@
   </script>
 
   <script src="https://unpkg.com/d3-interpolate@3.0.1/dist/d3-interpolate.min.js"> </script>
-<link rel="shortcut icon" href="/Julia.ico">
+<link rel="shortcut icon" href="Julia.ico">
   <link href="styles2.css" rel="stylesheet" type="text/css" />
 
 </head>
